--- a/talk.tex
+++ b/talk.tex
@@ -19,13 +19,13 @@
 \frametitle{When might function evaluation be slow?}
 \begin{itemize}
 \item
-Searching paramater space for complex scientific calculations (weather modeling, computational chemistry, etc.).
+Searching parameter space for complex scientific calculations (weather modeling, computational chemistry, etc.).
 \item
 Complex analytic expressions coming from Computer Algebra Systems (Mathematica, Sage, etc.).
 \item
 Plotting functions which require non-standard evaluation (e.g. integrals, sums).
 \item
-Limited computational power (e.g. graphics caclulators, phones.)
+Limited computational power (e.g. graphics calculators, phones.)
 \end{itemize}
 \end{frame}
 
