--- a/talk.tex
+++ b/talk.tex
@@ -200,6 +200,14 @@ $f(x,y) = \left(x,y, \frac{x y}{x^2 + y^2 + 1}\right)$, $n = 7$.
 $f(x,y) = \left(x,y, \frac{x y}{x^2 + y^2 + 1}\right)$, $n = 7$, $depth=2$.
 \end{frame}
 
+\begin{frame}
+\frametitle{Adaptive sampling minimising diagonals}
+\begin{center}
+\includegraphics[width=0.8\textwidth]{3Dpretty.png}
+\end{center}
+$f(x,y) = \left(x,y, \sin(x) \log(y)\right)$, $n = 7$, $depth=3$.
+\end{frame}
+
 \section*{}
 \begin{frame}
 \frametitle{Thankyou}
